--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -27,12 +27,14 @@
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
 
-            <!-- Points to searchable activity -->
-            <meta-data android:name="android.app.default_searchable"
+        </activity>
+        <activity
+            android:name=".FeedbackActivity"
+            android:label="@string/app_feedback_name"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
-            <!-- Points to searchable meta data -->
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
         </activity>
 
     </application>
